--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ nav ul li a:hover {
 
 .container h1 {
   text-align: center;
-  font-size: 50px;
+  font-size: 2rem;
 }
 
 .profileImage {
@@ -67,7 +67,7 @@ nav ul li a:hover {
   height: 100px;
   width: 100px;
   border-radius: 50%;
-  margin-bottom: 15px;
+  margin:50px 0;
 }
 
 img {
@@ -76,17 +76,22 @@ img {
 }
 
 .service {
-  margin-top: 80px;
-  margin-bottom: 60px;
+  margin: 100px 0;
+}
+
+#skill {
+  margin-bottom: 100px;
 }
 
 #skill img {
   object-fit: cover;
-  margin-bottom: 12px;
-  margin-top: 12px;
+  margin: 30px 0;
   height: 300px;
 }
 
 #skill button {
   margin-bottom: 100px;
+}
+.col-md-4 a {
+  text-decoration: none;
 }
