--- a/src/App.css
+++ b/src/App.css
@@ -10,27 +10,12 @@
   width: 100%;
   /* font-weight: 400; */
   /* font-style: normal; */
+
 }
 
-header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  background: black;
-  color: white;
-  height: 90px;
-  position: fixed;
-  z-index: 10;
-}
 
-header .logo h3 {
-  margin: 0;
-  padding: 0;
-  color: white;
-}
 
-nav ul {
+/* nav ul {
   margin: 0;
   padding: 0;
 }
@@ -50,7 +35,7 @@ nav ul li a {
 
 nav ul li a:hover {
   color: #48b4af;
-}
+} */
 
 .container {
   height: auto;
