--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Noto+Sans+JP&family=Playfair+Display&family=Poppins:wght@700&family=Zen+Old+Mincho&display=swap');
+
 :root {
   --black-color: #010000;
   --white-color: #ffffff;
   --lightgray-color: #ededed;
+  --deep-dark:#1E1E1E;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 
 .App {
@@ -12,20 +20,19 @@
   width: 100%;
   /* font-weight: 400; */
   /* font-style: normal; */
-  padding: 120px 0;
-  background-color: var(--lightgray-color);
+  padding: 120px 0 0 0;
+  background-color: #262626;
+  color: #ffffff;
 }
 
 
 .container {
   height: auto;
   padding: 0px;
+  width: 90%;
+  margin: 0 auto;
 }
 
-.container h1 {
-  text-align: center;
-  font-size: 2rem;
-}
 
 .profileImage {
   object-fit: cover;
@@ -35,10 +42,6 @@
   margin:50px 0;
 }
 
-img {
-  width: 300px;
-  height: 500px;
-}
 
 .service {
   margin: 100px 0;
