--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,18 @@ img {
 .col-md-4 a {
   text-decoration: none;
 }
+
+.fadeIn {
+  animation: fadeIn 500ms linear both;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
